--- a/takin-cloud-app/pom.xml
+++ b/takin-cloud-app/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.shulie.takin</groupId>
         <artifactId>takin-cloud</artifactId>
-        <version>takin-cloud-5.2.0-SNAPSHOT</version>
+        <version>takin-cloud-5.2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
