--- a/takin-cloud-common/pom.xml
+++ b/takin-cloud-common/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>takin-cloud</artifactId>
         <groupId>io.shulie.takin</groupId>
-        <version>takin-cloud-5.2.0</version>
+        <version>takin-cloud-5.2.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
