--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,11 @@
                 <artifactId>redisson</artifactId>
                 <version>${redisson.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>io.shulie.flpt</groupId>
+                <artifactId>jmeter-redis-tool</artifactId>
+                <version>1.3.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
