--- a/takin-cloud-biz-service/pom.xml
+++ b/takin-cloud-biz-service/pom.xml
@@ -73,6 +73,10 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.shulie.flpt</groupId>
+            <artifactId>jmeter-redis-tool</artifactId>
+        </dependency>
 
     </dependencies>
 
