--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.shulie.takin</groupId>
     <artifactId>takin-cloud</artifactId>
-    <version>takin-cloud-5.2.1-SNAPSHOT</version>
+    <version>takin-cloud-5.2.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
@@ -17,7 +17,7 @@
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ssa</maven.build.timestamp.format>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <!-- biz version -->
-        <takin.cloud.version>takin-cloud-5.2.1-SNAPSHOT</takin.cloud.version>
+        <takin.cloud.version>takin-cloud-5.2.1.1-SNAPSHOT</takin.cloud.version>
         <takin.common.version>common-2.0.0-SNAPSHOT</takin.common.version>
 
         <pardar.log.protocol.version>2.0.4</pardar.log.protocol.version>
@@ -197,19 +197,28 @@
     </dependencyManagement>
 
 
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>${releases.id}</id>-->
+<!--            <name>${releases.name}</name>-->
+<!--            <url>${releases.url}</url>-->
+<!--        </repository>-->
+<!--        <snapshotRepository>-->
+<!--            <id>${snapshots.id}</id>-->
+<!--            <name>${snapshots.name}</name>-->
+<!--            <url>${snapshots.url}</url>-->
+<!--        </snapshotRepository>-->
+<!--    </distributionManagement>-->
     <distributionManagement>
         <repository>
-            <id>${releases.id}</id>
-            <name>${releases.name}</name>
-            <url>${releases.url}</url>
+            <id>rdc-releases</id>
+            <url>https://packages.aliyun.com/maven/repository/2101190-release-xxuvBf</url>
         </repository>
         <snapshotRepository>
-            <id>${snapshots.id}</id>
-            <name>${snapshots.name}</name>
-            <url>${snapshots.url}</url>
+            <id>rdc-snapshots</id>
+            <url>https://packages.aliyun.com/maven/repository/2101190-snapshot-EQD7pQ</url>
         </snapshotRepository>
     </distributionManagement>
-
     <url>https://github.com/shulieTech/Takin-cloud.git</url>
     <description>takin-cloud</description>
     <developers>
