--- a/takin-cloud-sdk/pom.xml
+++ b/takin-cloud-sdk/pom.xml
@@ -6,12 +6,13 @@
     <parent>
         <groupId>io.shulie.takin</groupId>
         <artifactId>takin-cloud</artifactId>
-        <version>takin-cloud-5.2.1-SNAPSHOT</version>
+        <version>5.2.2</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <name>takin-cloud-sdk</name>
     <artifactId>takin-cloud-sdk</artifactId>
-    <version>takin-cloud-sdk-5.2.1-SNAPSHOT</version>
+    <version>5.2.2</version>
 
     <dependencies>
         <dependency>
@@ -36,7 +37,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.7.16</version>
+            <version>5.7.20</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
@@ -45,7 +46,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.78</version>
+            <version>1.2.79</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
