--- a/takin-cloud-sdk/pom.xml
+++ b/takin-cloud-sdk/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>takin-common-beans</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.shulie.takin</groupId>
+            <artifactId>takin-common-utils</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
