--- a/takin-cloud-plugins/plugin-engine-module/pom.xml
+++ b/takin-cloud-plugins/plugin-engine-module/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>takin-cloud-plugins</artifactId>
         <groupId>io.shulie.takin</groupId>
-        <version>5.2.2</version>
+        <version>5.2.4</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
