--- a/takin-cloud-bom/pom.xml
+++ b/takin-cloud-bom/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>io.shulie.takin</groupId>
-    <version>5.2.2</version>
+    <version>5.2.6</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
@@ -11,8 +11,8 @@
     <artifactId>takin-cloud-bom</artifactId>
 
     <properties>
-        <takin.cloud.version>5.2.5</takin.cloud.version>
-        <takin.cloud.sdk.version>5.2.5</takin.cloud.sdk.version>
+        <takin.cloud.version>5.2.6</takin.cloud.version>
+        <takin.cloud.sdk.version>5.2.6</takin.cloud.sdk.version>
     </properties>
 
     <dependencyManagement>
@@ -49,6 +49,17 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <distributionManagement>
+        <repository>
+            <id>rdc-releases</id>
+            <url>https://packages.aliyun.com/maven/repository/2101190-release-xxuvBf/</url>
+        </repository>
+        <snapshotRepository>
+            <id>rdc-snapshots</id>
+            <url>https://packages.aliyun.com/maven/repository/2101190-snapshot-EQD7pQ/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <url>https://github.com/shulieTech/Takin-cloud.git</url>
     <description>takin-cloud</description>
