--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=10010
 spring.datasource.username          = root
 spring.datasource.password          = shulie@2020
 spring.datasource.url               = jdbc:mysql://192.168.1.129:3306/crank
