--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.redis.redisson.file           = classpath:redisson.yaml
 # \u5176\u5B83\u914D\u7F6E
 mybatis-plus.global-config.banner    = false
 mybatis-plus.configuration.log-impl  = org.apache.ibatis.logging.stdout.StdOutImpl
+logging.config=
