--- a/app/pom.xml
+++ b/app/pom.xml
@@ -36,6 +36,11 @@
             <version>5.3.0</version>
         </dependency>
         <dependency>
+            <groupId>io.shulie.takin.cloud</groupId>
+            <artifactId>model</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
             <exclusions>
@@ -68,7 +73,7 @@
     </dependencies>
 
     <build>
-        <finalName>takin-cloud-${project.artifactId}-${project.version}.jar</finalName>
+        <finalName>takin-cloud-${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
