--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>constant</module>
         <!--    build放在最后    -->
         <module>build</module>
+        <module>model</module>
     </modules>
     <dependencyManagement>
         <dependencies>
