--- a/app/pom.xml
+++ b/app/pom.xml
@@ -13,6 +13,10 @@
 
     <artifactId>app</artifactId>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
