--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.datasource.druid.max-active                        = 20
 # Redis\u914D\u7F6E
 # suppress inspection "SpringBootApplicationProperties"
 spring.redis.redisson.file                                = classpath:redisson.yaml
+# InfluxDB\u8FDE\u63A5\u914D\u7F6E
+spring.influxdb.url                                       = http://192.168.1.129:8086
+spring.influxdb.user                                      = pradar
+spring.influxdb.password                                  = pradar
+spring.influxdb.database                                  = jmeter2
 # \u5176\u5B83\u914D\u7F6E
 mybatis-plus.global-config.banner                         = false
 mybatis-plus.configuration.log-impl                       = org.apache.ibatis.logging.stdout.StdOutImpl
