--- a/model/pom.xml
+++ b/model/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>constant</artifactId>
             <version>5.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
